# graduation_project-ESP32

./: README.md
assets/UI设计文件/_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
assets/UI设计文件/_ui/images/: ui_img_1452054505.c  ui_img_card_1_png.c  ui_img_card_5_png.c  ui_img_card_9_png.c  ui_img_famer_png.c  ui_img_home_cpu_png.c  ui_img_home_png.c  ui_img_play_bg_png.c  ui_img_settings_png.c
assets/UI设计文件/_ui/screens/: ui_home.c  ui_playPage1.c  ui_playPage2.c  ui_settings.c
assets/UI设计文件/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
assets/UI设计文件/ui/images/: ui_img_1144387654.c  ui_img_1572002003.c  ui_img_1993502234.c  ui_img_49543422.c  ui_img_814085921.c  ui_img_back_png.c  ui_img_card_2_png.c  ui_img_card_3_png.c  ui_img_card_4_png.c  ui_img_card_6_png.c  ui_img_card_7_png.c  ui_img_card_8_png.c  ui_img_home_2v2_png.c  ui_img_loader_png.c  ui_img_vs_png.c
assets/UI设计文件/ui/screens/: ui_home.c  ui_playPage1.c  ui_playPage2.c
assets/UI设计文件/设计/: SquareLine_Project.sll  SquareLine_Project.spj
program/getStart/: 1. ui设计文件职责分析.md
